# PeakRDL-pybind11

./: .gitignore  .readthedocs.yaml  COMPILATION_OPTIMIZATIONS.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: benchmark.yml  build.yml  docs.yml  format.yml  lint.yml  release.yml  test.yml  typecheck.yml
benchmarks/: BENCHMARK_IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  REAL_WORLD_SOURCES.md  RESULTS.md  __init__.py  pytest.ini  run_benchmarks.py  test_benchmarks.py  test_runtime_master.py  test_runtime_memory.py  test_runtime_raw_accessors.py  test_runtime_transaction.py  test_runtime_write_fields.py  test_runtime_write_only.py
benchmarks/rdl_files/: README.md  large.rdl  medium.rdl  realistic_mcu.rdl  simple.rdl
docs/: IDEAL_API_SKETCH.md  api.rst  architecture.md  conf.py  feature_matrix.rst  index.rst  installation.rst  requirements.txt  usage.rst
docs/api/: exporter.rst  int_types.rst  masters.rst
docs/concepts/: aliases.rst  arrays.rst  bus_layer.rst  cli_repl.rst  enums_flags.rst  errors.rst  hierarchy.rst  interrupts.rst  memory.rst  observers.rst  side_effects.rst  snapshots.rst  specialized.rst  values_and_io.rst  wait_poll.rst  widgets.rst
docs/extending/: cli.rst  exporter.rst  index.rst  runtime.rst
examples/: demo_memory.py  demo_repr.py  example.rdl  int_types_demo.py  run_example.py
examples/output/: CMakeLists.txt  __init__.py  __init__.pyi  example_soc_bindings.cpp  example_soc_descriptors.hpp  pyproject.toml
peakrdl_pybind/: __init__.py  backend.py  cli.py  ir.py  render.py
peakrdl_pybind/templates/: CMakeLists.txt.jinja  accessors.hpp.jinja  master.cpp.jinja  master.hpp.jinja  openocd_master.cpp.jinja  pyproject.toml.jinja  reg_model.cpp.jinja  reg_model.hpp.jinja  soc.pyi.jinja  soc_module.cpp.jinja  ssh_devmem_master.cpp.jinja
peakrdl_pybind11/: __init__.py  __peakrdl__.py  exporter.py
peakrdl_pybind11/masters/: openocd.py  ssh.py
peakrdl_pybind11/templates/: CMakeLists.txt.jinja  bindings.cpp.jinja  bindings_chunk.cpp.jinja  descriptors.hpp.jinja  runtime.py.jinja  setup.py.jinja  stubs.pyi.jinja
src/peakrdl_pybind/: __init__.py  backend.py  cli.py  ir.py  render.py
src/peakrdl_pybind/templates/: CMakeLists.txt.jinja  master.cpp.jinja  master.hpp.jinja  pyproject.toml.jinja  reg_model.cpp.jinja  reg_model.hpp.jinja  soc_module.cpp.jinja
src/peakrdl_pybind/templates/cpp/: accessors.cpp.jinja  accessors.hpp.jinja  master.cpp.jinja  master.hpp.jinja  reg_model.cpp.jinja  reg_model.hpp.jinja  soc_module.cpp.jinja
src/peakrdl_pybind/templates/masters/: openocd_master.cpp.jinja  ssh_devmem_master.cpp.jinja
src/peakrdl_pybind/templates/typing/: soc.pyi.jinja
src/peakrdl_pybind11/: __init__.py  __peakrdl__.py  _version.py  errors.py  exporter.py  int_types.py
src/peakrdl_pybind11/cli/: __init__.py  diff.py  explore.py  replay.py  strict_fields.py  udp_config.py  watch.py
src/peakrdl_pybind11/exporter_plugins/: __init__.py  feature_detection.py
src/peakrdl_pybind11/masters/: __init__.py  _side_effect_model.py  base.py  callback.py  mock.py  mock_extensions.py  openocd.py  recording_replay.py  sim.py  ssh.py
src/peakrdl_pybind11/runtime/: __init__.py  _default_shims.py  _errors.py  _protocols.py  _registry.py  aliases.py  arrays.py  async_session.py  bits.py  bus_policies.py  caching.py  errors.py  hot_reload.py  info.py  interrupts.py  locking.py  mem_view.py  observers.py  reset.py  routing.py  schema.py  side_effects.py  signals.py  snapshot.py  specialized.py  trace.py  transactions.py  values.py  wait_poll.py  widgets.py
src/peakrdl_pybind11/templates/: CMakeLists.txt.jinja  _array_binding_macros.jinja  bindings.cpp.jinja  bindings_chunk.cpp.jinja  bindings_main.cpp.jinja  descriptors.hpp.jinja  pyproject_module.toml.jinja  runtime.py.jinja  stubs.pyi.jinja
src/peakrdl_pybind11/templates/descriptors/: addrmap_arrays.hpp.jinja  addrmaps.hpp.jinja  arrays.hpp.jinja  base_classes.hpp.jinja  forward_declarations.hpp.jinja  mem_arrays.hpp.jinja  memories.hpp.jinja  regfile_arrays.hpp.jinja  regfiles.hpp.jinja  registers.hpp.jinja  top_node.hpp.jinja
test_ot/: README.md  bench_masters.py  bench_new_api.py  bench_scaling.py  build_ot.py  hjson_to_rdl.py  run_export.py  smoke_test.py
tests/: __init__.py  test_array_codegen.py  test_array_integration.py  test_array_interactions.py  test_backend.py  test_context_manager.py  test_encode_integration.py  test_exporter.py  test_hypothesis.py  test_int_flag_enum.py  test_int_types.py  test_int_types_integration.py  test_ir_builder.py  test_known_bugs.py  test_memory.py  test_memory_block_integration.py  test_memory_integration.py  test_native_masters_integration.py  test_property_based.py  test_raw_accessors.py  test_repr.py  test_repr_integration.py  test_transaction.py  test_udp_config.py  test_udp_integration.py  test_workflow.py  test_write_fields.py  test_write_only_context.py
tests/runtime/: __init__.py  conftest.py  test_access_enforcement.py  test_aliases.py  test_arrays.py  test_async_session.py  test_bits.py  test_bus_policies.py  test_caching.py  test_caching_stateful.py  test_cli_subcommands.py  test_e2e.py  test_errors.py  test_feature_detection.py  test_field_encode.py  test_hot_reload.py  test_info.py  test_interrupts.py  test_locking.py  test_mem_view.py  test_mock_extensions.py  test_observers.py  test_registry.py  test_reset.py  test_routing.py  test_schema.py  test_side_effects.py  test_signals.py  test_sim_master.py  test_sim_master_stateful.py  test_snapshot.py  test_specialized.py  test_trace.py  test_transactions.py  test_values.py  test_wait_poll.py  test_widgets.py
