[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "peakrdl-pybind11"
dynamic = ["version"]
description = "Export SystemRDL to PyBind11 modules for Python-based hardware testing"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "GPL-3.0-only"}
keywords = ["SystemRDL", "PyBind11", "register", "hardware", "testing"]
authors = [
    {name = "Arnav Sacheti"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
    "systemrdl-compiler >= 1.27.0",
    "peakrdl >= 1.1.0",
    "jinja2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pylint",
]

[project.urls]
Homepage = "https://github.com/arnavsacheti/PeakRDL-pybind11"
Repository = "https://github.com/arnavsacheti/PeakRDL-pybind11"
Issues = "https://github.com/arnavsacheti/PeakRDL-pybind11/issues"

[project.entry-points."peakrdl.exporters"]
pybind11 = "peakrdl_pybind11.__peakrdl__:Exporter"

[tool.setuptools]
packages = ["peakrdl_pybind11", "peakrdl_pybind11.masters"]

[tool.setuptools.package-data]
peakrdl_pybind11 = ["templates/*.jinja"]

[tool.setuptools_scm]
write_to = "peakrdl_pybind11/_version.py"
