[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "peakrdl-pybind11"
version = "0.6.0"
description = "Export SystemRDL to PyBind11 modules for Python-based hardware testing"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-only" }
keywords = ["SystemRDL", "PyBind11", "register", "hardware", "testing"]
authors = [{ name = "Arnav Sacheti" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = ["systemrdl-compiler >= 1.30.1", "jinja2", "numpy>=1.24"]

[project.optional-dependencies]
cli = ["peakrdl-cli >= 1.2.3"]
notebook = ["ipywidgets>=8", "watchdog>=3", "pandas>=2"]

[dependency-groups]
docs = [
    "sphinx >= 7.0",
    "sphinx-book-theme >= 1.0",
    "sphinx-autodoc-typehints >= 2.0",
]
benchmark = ["pytest >= 7.4.4", "pytest-benchmark >= 5.1.0", "build >= 1.0.0"]
test = [
    "hypothesis>=6.151.9",
    "pytest >= 7.4.4",
    "pytest-cov >= 4.1.0",
]
tools = ["ty >= 0.0.15", "ruff >= 0.14.0"]

[project.urls]
Homepage = "https://github.com/arnavsacheti/PeakRDL-pybind11"
Repository = "https://github.com/arnavsacheti/PeakRDL-pybind11"
Issues = "https://github.com/arnavsacheti/PeakRDL-pybind11/issues"

[project.entry-points."peakrdl.exporters"]
pybind11 = "peakrdl_pybind11.__peakrdl__:Exporter"

[tool.setuptools.package-data]
peakrdl_pybind11 = ["templates/*.jinja", "templates/**/*.jinja"]

# --------------------- PYTEST ---------------------
[tool.pytest.ini_options]
markers = [
    "integration: tests that build a generated SoC module via cmake (slow; needs a C++ toolchain)",
]

# ---------------------- RUFF ----------------------
[tool.ruff]
line-length = 110
target-version = "py310"
extend-exclude = ["CVS", "parser", "docs", "tests", "test_ot"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific
    "ANN", # flake8-annotations (require type annotations)
]
ignore = [
    "F841",  # unused-variable
    "UP032", # consider-using-f-string
    "E501",  # line-too-long
]

# The runtime/CLI/exporter-plugin seams are deliberately generic over the
# generated types produced per-SoC; ``Any`` is the correct annotation for
# the hook surface. Suppress ANN401 on those files only.
[tool.ruff.lint.per-file-ignores]
"src/peakrdl_pybind11/runtime/**/*.py" = ["ANN401"]
"src/peakrdl_pybind11/cli/**/*.py" = ["ANN401"]
"src/peakrdl_pybind11/exporter_plugins/**/*.py" = ["ANN401"]
"src/peakrdl_pybind11/masters/base.py" = ["ANN401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ------------------- PYREFLY --------------------
[tool.pyrefly]
project_includes = ["src/**"]

# ---------------------- TY ----------------------
[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
include = ["src"]
